knowledge_base/knowledge/v12/capl/structured/IP/_OnSomeIpMethodRequest_.md
# <OnSomeIpMethodRequest>

> Category: `IP` | Type: `function`

## Syntax

```c
void <OnSomeIpMethodRequest>( dword methodHandle, dword messageHandle, dword messageResponseHandle ); // form 1
```

## Description

A callback function with this signature must be passed to the CAPL function SomeIpAddMethod.

The syntax of the callback function specified in form 2 must be used if the fireAndForget parameter was used when the method was created by the provider (see also SomeIpAddMethod).

This callback is called when a consumer has called the method created with SomeIpAddMethod.

## Return Values

—

## Example

In this example, it is assumed that the created method is contained in the FIBEX database that is assigned to the CANoe configuration. The method has the Method ID 31, two input parameters (Member_value1 and Member_value2), and a return parameter (Result).

```c
variables
{
  DWORD gPm; // provided method handle
}

void Initialize()
{
  DWORD aep; // application endpoint handle
  DWORD psi; // provided Service Instance handle

  // open application endpoint
  aep = SomeIpOpenLocalApplicationEndpoint(17, 50002);

  // create Service Instance
  psi = SomeIpCreateProvidedServiceInstance(aep,11,1);

  // create method
  gPm = SomeIpAddMethod(psi,31,"OnMethodRequest");
}

void OnMethodRequest(dword methodHandle,dword messageHandle,dword messageResponseHandle)
{
  WORD val1; // value of input parameter 1
  WORD val2; // value of input parameter 2
  DWORD res; // value of return parameter

  // get value from request
  val1 = (WORD)SomeIpGetValueDWord(messageHandle,"Member_value1");
  val2 = (WORD)SomeIpGetValueDWord(messageHandle,"Member_value2");

  // calculate result
  res = val1 + val2;

  // set response value
  SomeIpSetValueDWord(messageResponseHandle,"Result",(val1 + val2));
}
```

## Availability

| Since Version |
|---|
